--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -32,5 +32,6 @@
 </head>
 <body>
 <script src="https://s3.amazonaws.com/main-themes/main.js"></script>
+<h5>{{mainmenu}}</h5>
 </body>
 </html>
