--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,14 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY">
-    <meta name="author" content="User name1">
-    <meta name="keywords" content="list">
-    <title>List</title>
-    <script type="application/ld+json">
+    <script src="https://s3.amazonaws.com/main-themes/main-header.js"></script>
+    <script id="content-linked-data" type="application/ld+json">
         {
         "entity": "List",
         "version": "1.0",
@@ -28,8 +22,8 @@
         ]
         }
     </script>
-<script src="https://s3.amazonaws.com/main-themes/main.js"></script>
 </head>
 <body>
+    <script src="https://s3.amazonaws.com/main-themes/main-body.js"></script>
 </body>
 </html>
