--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="https://s3.amazonaws.com/main-themes/main-header.js"></script>
+    <script src="http://wall2003.github.io/main-header.js"></script>
     <script id="content-linked-data" type="application/ld+json">
         {
         "entity": "List",
@@ -24,6 +24,6 @@
     </script>
 </head>
 <body>
-    <script src="https://s3.amazonaws.com/main-themes/main-body.js"></script>
+    <script src="http://wall2003.github.io/main-body.js"></script>
 </body>
 </html>
