--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="http://wall2003.github.io/Themes/Default/main-header.js"></script>
+</head>
+<body>
+    <script src="http://wall2003.github.io/Themes/Default/main.js"></script>
     <script id="content-linked-data" type="application/ld+json">
         {
         "entity": "List",
@@ -22,8 +24,5 @@
         ]
         }
     </script>
-</head>
-<body>
-    <script src="http://wall2003.github.io/Themes/Default/main-body.js"></script>
 </body>
 </html>
