--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link href="http://wall2003.github.io/Themes/Default/css/webrunes.css" rel="stylesheet">
 </head>
 <body>
     <script src="http://wall2003.github.io/Themes/Default/main.js"></script>
