--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,9 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-</head>
-<body>
-    <script src="http://wall2003.github.io/Themes/Default/main.js"></script>
     <script id="content-linked-data" type="application/ld+json">
         {
         "entity": "List",
@@ -24,5 +21,8 @@
         ]
         }
     </script>
+</head>
+<body>
+    <script src="http://wall2003.github.io/Themes/Default/main.js" id='root_script'></script>
 </body>
 </html>
