--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -23,6 +23,6 @@
     </script>
 </head>
 <body>
-    <script src="http://wall2003.github.io/Themes/Default/main.js" id='root_script'></script>
+    <script src="http://wall2003.github.io/main.js" id='root_script'></script>
 </body>
 </html>
