--- a/Widgets/Menu/menu-frame.html
+++ b/Widgets/Menu/menu-frame.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html data-ng-app>
+<html data-ng-app='menuWidget'>
 <head>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js'></script>
     <script src="http://wall2003.github.io/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body data-ng-controller='menuWidgetCtrl'>
     <menuWidget></menuWidget>
     <script src="http://wall2003.github.io/Widgets/Menu/menu-widget.js"></script>
 </body>
