--- a/Widgets/Menu/menu-frame.html
+++ b/Widgets/Menu/menu-frame.html
@@ -7,7 +7,7 @@
 </head>
 <body data-ng-controller='menuWidgetCtrl'>
     <h3 data-ng-bind='title'>not work</h3>
-    <menuWidget></menuWidget>
+    <menu-widget></menu-widget>
     <script src="http://wall2003.github.io/Widgets/Menu/menu-widget.js"></script>
 </body>
 </html>
