--- a/Widgets/Menu/menu-frame.html
+++ b/Widgets/Menu/menu-frame.html
@@ -7,7 +7,17 @@
 </head>
 <body data-ng-controller='menuWidgetCtrl'>
     <h3 data-ng-bind='title'>not work</h3>
-    <menu-widget></menu-widget>
+    <div class="navbar-header">
+        <ul class="nav menu pull-right">
+            <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
+            <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-lock"></span></a></li>
+            <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-fullscreen"></span></a></li>
+            <li><a href="#" class="btn btn btn-link btn-sm visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+            <li><a href="#" class="btn btn btn-link btn-sm visible-xs" data-toggle="offcanvas"><span class="glyphicon glyphicon-transfer"></span></a></li>
+        </ul>
+        <a href="#" class="navbar-brand">&nbsp;</a>
+    </div>
+    <div class="navbar-collapse in" menu-widget></div>
     <script src="http://wall2003.github.io/Widgets/Menu/menu-widget.js"></script>
 </body>
 </html>
