--- a/Widgets/Menu/menu-frame.html
+++ b/Widgets/Menu/menu-frame.html
@@ -4,9 +4,10 @@
     <script src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js'></script>
     <script src="http://wall2003.github.io/js/bootstrap.min.js"></script>
+    <link href="http://wall2003.github.io/Themes/Default/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="http://wall2003.github.io/Themes/Default/css/webrunes.css" rel="stylesheet">
 </head>
 <body data-ng-controller='menuWidgetCtrl'>
-    <h3 data-ng-bind='title'>not work</h3>
     <div class="navbar-header">
         <ul class="nav menu pull-right">
             <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
@@ -18,6 +19,9 @@
         <a href="#" class="navbar-brand">&nbsp;</a>
     </div>
     <div class="navbar-collapse in" menu-widget></div>
+
+    <h3 data-ng-bind='title'>not work</h3>
+
     <script src="http://wall2003.github.io/Widgets/Menu/menu-widget.js"></script>
 </body>
 </html>
