--- a/Widgets/Menu/menu-frame.html
+++ b/Widgets/Menu/menu-frame.html
@@ -7,7 +7,7 @@
     <link href="http://wall2003.github.io/Widgets/Menu/bootstrap.min.css" rel="stylesheet" />
     <link href="http://wall2003.github.io/Widgets/Menu/webrunes.css" rel="stylesheet">
 </head>
-<body data-ng-controller='menuWidgetCtrl'>
+<body class="navbar navbar-inverse main navbar-fixed-top row-offcanvas-menu" data-ng-controller='menuWidgetCtrl'>
     <div class="navbar-header">
         <ul class="nav menu pull-right">
             <li><a href="#" class="btn btn btn-link btn-sm"><span class="glyphicon glyphicon-envelope"></span></a></li>
