--- a/Widgets/Menu/menu-widget.html
+++ b/Widgets/Menu/menu-widget.html
@@ -1,29 +1,10 @@
 <ul class="nav navbar-nav" id="nav-accordion">
-    <li class="panel">
-        <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
-        <div class="collapse" id="element1">
-            <ul class="nav nav-pills nav-stacked sub">
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Help post</a></li>
-            </ul>
-        </div>
-    </li>
-    <li class="panel">
-        <a href="#element2" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">42</span>Reader</a>
-        <div class="collapse" id="element2">
-            <ul class="nav nav-pills nav-stacked sub">
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Blogs</a></li>
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Science</a></li>
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Best photos</a></li>
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Animals</a></li>
-            </ul>
-        </div>
-    </li>
     <li class="panel active">
-        <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>Alexey Anshakov</a>
+        <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>{{tab}}</a>
         <div class="in" id="element3">
             <ul class="nav nav-pills nav-stacked sub">
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">My best post</a></li>
-                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Great blogs review</a></li>
+                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">{{subtab[0]}}</a></li>
+                <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">{{subtab[1]}}</a></li>
             </ul>
         </div>
     </li>
