--- a/Widgets/Menu/menu-widget.html
+++ b/Widgets/Menu/menu-widget.html
@@ -1,6 +1,6 @@
 <ul class="nav navbar-nav" id="nav-accordion">
     <li class="panel active">
-        <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">1</span>{{tab}}</a>
+        <a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right" ng-bind="subtab.length">0</span>{{tab}}</a>
         <div class="in" id="element3">
             <ul class="nav nav-pills nav-stacked sub">
                 <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">{{subtab[0]}}</a></li>
