--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -1,28 +1,37 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-    <script id="content-linked-data" type="application/ld+json">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.">
+    <meta name="author" content="Vasya Pupkin">
+    <meta name="keywords" content="story, cat">
+    <title>The story of the cat</title>
+    <script src="http://wall2003.github.io/main.js"></script>
+    <script id='content-linked-data' type="application/ld+json">
         {
-        "entity": "List",
-        "version": "1.0",
-        "language": [
-        {
-        "@type": "article",
-        "language": "en-US",
-        "name": "The story of the cat",
-        "url": "webrunes.com/post/1WwZGOSH1kJy7a_en-US.html?name=The-story-of-the-cat"
-        },
-        {
-        "@type": "article",
-        "language": "ru-RU",
-        "name": "История о коте",
-        "url": "my-blog.github.com/my-posts/1WwZGOSH1kJy7a_ru-RU.html?name=История-о-коте"
+        "entity": "article",
+        "templateVersion": "1.0",
+        "article": {
+        "@context": "schema.org",
+        "@type": "Article",
+        "articleBody": [
+        "Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.",
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.",
+        "Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum."
+        ],
+        "author": {
+        "@type": "Person",
+        "givenName": "Vasya",
+        "familyName": "Pupkin",
+        "sameAs": "http://vasya-pupkin.webrunes.com"
         }
-        ]
+        }
         }
     </script>
 </head>
+
 <body>
-    <script src="http://wall2003.github.io/main.js" id='root_script'></script>
 </body>
 </html>
