--- a/1WJyH1k7-list.html
+++ b/1WJyH1k7-list.html
@@ -30,6 +30,6 @@
     </script>
 </head>
 <body>
-    <script src="http://wall2003.github.io/Widgets/Plus/plus.js"></script>
+    <script src="http://wrio.s3-website-us-east-1.amazonaws.com/main.js"></script>
 </body>
 </html>
