--- a/1WJyH1k7_en-US.html
+++ b/1WJyH1k7_en-US.html
@@ -31,6 +31,6 @@
     </script>
 </head>
 <body>
-    <script src="http://wall2003.github.io/main.js"></script>
+    <script src="http://wrio.s3-website-us-east-1.amazonaws.com/main.js"></script>
 </body>
 </html>
