--- a/2ziwMaIk_en-US.html
+++ b/2ziwMaIk_en-US.html
@@ -99,6 +99,6 @@
 </head>
 
 <body>
-<script src="http://wrio-poul.s3-website-us-east-1.amazonaws.com/main.js"></script>
+<script src="http://s3.amazonaws.com/wrio-poul/main.js"></script>
 </body>
 </html>
