--- a/2ziwMaIk_en-US.html
+++ b/2ziwMaIk_en-US.html
@@ -1,4 +1,4 @@
-?<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,6 @@
     <meta name="author" content="User name1, User name2">
     <meta name="keywords" content="story, cat">
     <title>The story of the cat</title>
-    <script src="http://wr.io/main.js"></script>
     
     <!-- json-ld for WRIO -->
     <script type="application/ld+json">
