--- a/webRunes-WRIO-Hub/list-name.html
+++ b/webRunes-WRIO-Hub/list-name.html
@@ -40,7 +40,7 @@
               "name": "Alexey Anshakov",
               "about": "Description text",
               "image": "http://domain.com/image.jpg",
-              "url": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html"
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html"
         },
         {
               "@type": "Article",
