--- a/webRunes-WRIO-Hub/list-name.html
+++ b/webRunes-WRIO-Hub/list-name.html
@@ -28,7 +28,7 @@
         {
               "@type": "Article",
               "inLanguage": "en-US",
-              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "author": "http://wall2003.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
               "name": "The story of the cat",
               "about": "Description text",
               "image": "http://domain1.com/image1.jpg",
@@ -53,7 +53,7 @@
         {
               "@type": "Article",
               "inLanguage": "en-US",
-              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "author": "http://wall2003.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
               "name": "Help post",
               "about": "Description text",
               "image": "http://domain2.com/image2.jpg",
