--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -76,7 +76,7 @@
               "name": "The story of the cat",
               "about": "Description text",
               "image": "http://domain1.com/image1.jpg",
-              "url": "http://domain1.com/url1.html"
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/The-story-of-the-cat.html"
         },
         {
               "@type": "Article",
@@ -84,7 +84,7 @@
               "name": "Alexey Anshakov",
               "about": "Description text",
               "image": "http://domain.com/image.jpg",
-              "url": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html"
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html"
         },
         {
               "@type": "Article",
@@ -92,7 +92,7 @@
               "name": "Abother hub",
               "about": "Description text",
               "image": "http://domain-another-hub.com/image.jpg",
-              "url": "http://domain-another-hub.com/url-another-hub.html"
+              "url": "#"
         },
         {
               "@type": "Article",
@@ -101,7 +101,7 @@
               "name": "Help post",
               "about": "Description text",
               "image": "http://domain2.com/image2.jpg",
-              "url": "http://domain2.com/url2.html"
+              "url": "#"
         },
         {
               "@type": "Article",
@@ -110,7 +110,7 @@
               "name": "Article",
               "about": "Description text",
               "image": "http://domain4.com/image4.jpg",
-              "url": "http://domain4.com/url4.html"
+              "url": "#"
         }
         ]
         }
