--- a/webRunes-WRIO-Hub/The-story-of-the-cat.html
+++ b/webRunes-WRIO-Hub/The-story-of-the-cat.html
@@ -10,12 +10,55 @@
     <title>The story of the cat</title>
 
     <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "ItemList",
+        "name": "My Plus List",
+        "itemListElement": [
         {
-        "entity": "article",
-        "version": "1.0",
-        "templateVersion": "1.0",
-        "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
-        "translation": "http://domain.com/translation.html"
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "name": "The story of the cat",
+              "about": "Description text",
+              "image": "http://domain1.com/image1.jpg",
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/The-story-of-the-cat.html"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "name": "Alexey Anshakov",
+              "about": "Description text",
+              "image": "http://domain.com/image.jpg",
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "name": "Abother hub",
+              "about": "Description text",
+              "image": "http://domain-another-hub.com/image.jpg",
+              "url": "#"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "name": "Help post",
+              "about": "Description text",
+              "image": "http://domain2.com/image2.jpg",
+              "url": "#"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://domain-another-hub.com/url-another-hub.html",
+              "name": "Article",
+              "about": "Description text",
+              "image": "http://domain4.com/image4.jpg",
+              "url": "#"
+        }
+        ]
         }
     </script>
 
