--- a/webRunes-WRIO-Hub/Alexey-Anshakov.htm
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.htm
@@ -429,8 +429,8 @@
                         <li><a href="#">Hobby</a></li>-->
                     </ul>
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href="#">List name 1</a></li>
-                        <li><a href="#">List name 2</a></li>
+                        <li><a href="http://webrunes.com/blog.htm">Blog</a></li>
+                        <li><a href="http://webrunes.com/photos.htm">Photos</a></li>
                     </ul>
                     <!--<ul class="nav nav-pills nav-stacked">
                         <li><a href="#">Author</a></li>
