--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -105,22 +105,51 @@
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
-        "@type": "ItemList",
-        "name": "My lists",
+        "@type": "ItemList,
+        "name": "My list",
         "itemListElement": [
         {
-              "@type": "ItemList",
-              "name": "Blog",
-              "description": "Info about list",
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "name": "Post name",
+              "about": "Официальная страница webRunes и ноды webrunes.com. Здесь вы можете не только следить за новостями проекта, но и даже купить share компании.",
               "image": "http://domain1.com/image1.jpg",
-              "url": "http://webrunes.com/blog.htm"
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/The-story-of-the-cat.html"
         },
         {
-              "@type": "ItemList",
-              "name": "Photos",
-              "description": "Info about list",
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "name": "WRIO",
+              "about": "Здесь будет информация по тому, что такое WRIO OS, скачивание его дистрибутива или создание инстанса на AWS, связка с исходниками на github и пр.",
               "image": "http://domain.com/image.jpg",
-              "url": "http://webrunes.com/photos.htm"
+              "url": "http://wall2003.github.io/webRunes-WRIO-Hub/article.htm"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "name": "Blogs",
+              "about": "Здесь будет информация по тому, что такое WRIO OS, скачивание его дистрибутива или создание инстанса на AWS, связка с исходниками на github и пр.",
+              "image": "http://domain-another-hub.com/image.jpg",
+              "url": "http://domain.com/article.htm"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://webrunes.github.io/webRunes-WRIO-Hub/Alexey-Anshakov.html",
+              "name": "Storage",
+              "about": "Здесь будет информация по тому, что такое WRIO OS, скачивание его дистрибутива или создание инстанса на AWS, связка с исходниками на github и пр.",
+              "image": "http://domain2.com/image2.jpg",
+              "url": "http://domai.com/article2.htm"
+        },
+        {
+              "@type": "Article",
+              "inLanguage": "en-US",
+              "author": "http://domain-another-hub.com/url-another-hub.html",
+              "name": "webGold",
+              "about": "Здесь будет информация по тому, что такое WRIO OS, скачивание его дистрибутива или создание инстанса на AWS, связка с исходниками на github и пр.",
+              "image": "http://domain3.com/image3.jpg",
+              "url": "http://domain.com/article3.htm"
         }
         ]
         }
