--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -13,16 +13,8 @@
     {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "My cover list for hub",
-        "itemListElement": [
-        {
-              "@type": "ItemList",
-              "name": "Cover",
-              "description": "Info about list",
-              "image": "http://domain1.com/image1.jpg",
-              "url": "http://webrunes.com/cover.htm?cover"
-        }
-        ]
+        "name": "Cover",
+	"url": "#"
         }
     </script>
     <script type="application/ld+json">
