--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
@@ -14,8 +14,8 @@
         "@context": "http://schema.org",
         "@type": "ItemList",
         "name": "Cover",
-	"url": "#"
-        }
+	    "url": "#"
+	}
     </script>
     <script type="application/ld+json">
     {
@@ -41,7 +41,6 @@
       "url": "http://www.janedoe.com"
     }
     </script>
-
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
