--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -96,7 +96,7 @@
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
-        "@type": "ItemList,
+        "@type": "ItemList",
         "name": "My list",
         "itemListElement": [
         {
