--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -10,6 +10,23 @@
     <title>Alexey Anshakov</title>
 
     <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "ItemList",
+        "name": "My cover list for hub",
+        "itemListElement": [
+        {
+              "@type": "ItemList",
+              "name": "Cover",
+              "description": "Info about list",
+              "image": "http://domain1.com/image1.jpg",
+              "url": "http://webrunes.com/cover.htm?cover"
+        }
+        ]
+        }
+    </script>
+
+    <script type="application/ld+json">
         {
         "@context": "http://schema.org",
         "@type": "ItemList",
@@ -81,30 +98,7 @@
         }
     </script>
 
-    <!--<script type="application/ld+json">-->
-        <!--{-->
-        <!--"@context": "http://schema.org",-->
-        <!--"@type": "Person",-->
-        <!--"address": {-->
-        <!--"@type": "PostalAddress",-->
-        <!--"addressLocality": "Seattle",-->
-        <!--"addressRegion": "WA",-->
-        <!--"postalCode": "98052",-->
-        <!--"streetAddress": "20341 Whitworth Institute 405 N. Whitworth"-->
-        <!--},-->
-        <!--"colleague": [-->
-        <!--"http://www.xyz.edu/students/alicejones.html",-->
-        <!--"http://www.xyz.edu/students/bobsmith.html"-->
-        <!--],-->
-        <!--"email": "mailto:jane-doe@xyz.edu",-->
-        <!--"image": "janedoe.jpg",-->
-        <!--"jobTitle": "Professor",-->
-        <!--"givenName": "Jane",-->
-        <!--"familyName": "Doe",-->
-        <!--"telephone": "(425) 123-4567",-->
-        <!--"url": "http://www.janedoe.com"-->
-        <!--}-->
-    <!--</script>-->
+
 
     <script type="application/ld+json">
         {
