--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="story, cat">
     <title>Alexey Anshakov</title>
 
-    //cover
+    <!--cover -->
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
@@ -26,7 +26,7 @@
         ]
         }
     </script>
-    //article
+    <!--article -->
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
@@ -85,7 +85,7 @@
         ]
         }
     </script>
-    //itemlist cover
+    <!--itemlist cover -->
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
@@ -157,7 +157,7 @@
         ]
         }
     </script>
-    //itemlist itemlist
+    <!--itemlist itemlist -->
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
