--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="story, cat">
     <title>Alexey Anshakov</title>
 
-    <!--cover -->
+    <!--menu cover -->
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
