--- a/editor.html
+++ b/editor.html
@@ -3,9 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Core Editor</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="dist/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" type="text/css" href="public/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="public/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="public/dist/bootstrap3-wysihtml5.min.css">
 </head>
 <body>
     <p></p>
@@ -14,9 +14,9 @@
         <textarea rows="25" id="textarea-test" style="width: 450px; float: right;"></textarea>
     </div>
 
-    <script src="jquery/jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="dist/bootstrap3-wysihtml5.all.min.js"></script>
+    <script src="public/jquery/jquery.min.js"></script>
+    <script src="public/bootstrap/js/bootstrap.min.js"></script>
+    <script src="public/dist/bootstrap3-wysihtml5.all.min.js"></script>
 
     <script>
         var customTemplates = {
@@ -55,6 +55,6 @@
 
         });
     </script>
-    <script src="core.js"></script>
+    <script src="public/core.js"></script>
 </body>
 </html>
