--- a/editor.htm
+++ b/editor.htm
@@ -43,7 +43,7 @@
                 "font-styles": true,
                 "emphasis": false,
                 "lists": true,
-                "html": true,
+                "html": false,
                 "link": true,
                 "image": false,
                 "color": false,
