--- a/editor.htm
+++ b/editor.htm
@@ -43,11 +43,11 @@
                 "font-styles": true,
                 "emphasis": false,
                 "lists": true,
-                "html": false,
+                "html": true,
                 "link": true,
                 "image": false,
                 "color": false,
-                "blockquote": false,
+                "blockquote": true,
                 save: true
             },
             customTemplates: customTemplates
